# AI1811-E3-ML-Master

./: .gitignore  .gitmodules  AGENT_INTRO.md  CLAUDE.md  README.md  main.py  pyproject.toml
agent/: agent_utils.py  debug_agent.py  draft_agent.py  feedback_agent.py  improve_agent.py  mcts_agent.py
backend/: __init__.py  backend_openai.py  backend_qwen.py  backend_utils.py  call.py
dataset/full_instructions/: instruction_template.txt
dataset/full_instructions/3d-object-detection-for-autonomous-vehicles/: full_instructions.txt
dataset/full_instructions/AI4Code/: full_instructions.txt
dataset/full_instructions/aerial-cactus-identification/: full_instructions.txt
dataset/full_instructions/alaska2-image-steganalysis/: full_instructions.txt
dataset/full_instructions/aptos2019-blindness-detection/: full_instructions.txt
dataset/full_instructions/billion-word-imputation/: full_instructions.txt
dataset/full_instructions/bms-molecular-translation/: full_instructions.txt
dataset/full_instructions/cassava-leaf-disease-classification/: full_instructions.txt
framework/: __init__.py  agent.py  memory.py  node.py  utils.py
interpreter/: interpreter_parallel.py
plot/: plot_score_trend.py
prompt/: system_prompt.md
scripts/: backup.sh  grading.sh  kill.sh  launch_server.sh  run.sh
search/: journal.py  mcts_node.py  node.py
test/: test_extracting.py  test_extracting_md.md
utils/: __init__.py  config_mcts.py  config_mcts_example.yaml  control_panel.py  data_preview.py  llm_caller.py  mcts.py  response.py  serialize.py  server_utils.py
(+68 files in other folders)
