[project]
name = "E3-ML-Master"
version = "0.1.0"
description = "ML-go"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "black>=25.9.0",
    "coolname>=2.2.0",
    "dataclasses-json>=0.6.7",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "funcy>=2.0",
    "genson>=1.3.0",
    "humanize>=4.14.0",
    "ipython>=9.6.0",
    "jsonschema>=4.25.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "openai>=2.6.1",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "shutup>=0.2.0",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
    "xgboost>=3.1.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
